fixed bottom spacing

--- a/public/css/pipo.css
+++ b/public/css/pipo.css
@@ -226,6 +226,7 @@ body, html { padding: 0; margin: 0; }
   background-color: rgb(48, 64, 71);
   box-sizing: border-box;
   color: rgb(255, 255, 255);
+  display: flex;
   flex-direction: column;
   flex-grow: 0;
   flex-shrink: 0;
